iptables.rules
# Generated by iptables-save v1.8.4 on Sun Mar 13 02:37:28 2022
*filter
:INPUT ACCEPT [154801:8886619]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [207681:21504147]
:SAMP-DDOS - [0:0]
-A INPUT -p tcp -m tcp --dport 52307 -j ACCEPT
-A INPUT -p udp -m udp --dport 7777 -m ttl --ttl-eq 128 -j SAMP-DDOS
-A INPUT -p udp -m ttl --ttl-eq 128 -j DROP
-A INPUT -p udp -m udp --dport 7777 -m limit --limit 3/sec --limit-burst 12 -j DROP
-A INPUT -p udp -m limit --limit 3/sec -j DROP
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 465 -j ACCEPT
-A SAMP-DDOS -p udp -m udp --dport 7777 -m length --length 10:604 -j DROP
COMMIT
# Completed on Sun Mar 13 02:37:28 2022
